--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,6 +25,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup_environment
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Lint with Checkstyle
         run: |
           pwd
