--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -37,6 +37,8 @@ jobs:
     needs: lint
     if: success()
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
       - name: Run tests
         run: |
           mvn test
@@ -47,6 +49,9 @@ jobs:
     if: success()
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Build with Maven
         run: |
           mvn clean package -DskipTests
@@ -58,6 +63,8 @@ jobs:
     if: github.event.pull_request.merged == true && github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/v')
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
