--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,10 +16,11 @@ jobs:
           distribution: 'adopt'
           java-version: 21
 
-      - name: Install Maven
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y maven
+      - name: Set up Maven
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'maven'
+          maven-version: '3.8.6'
 
   lint:
     runs-on: ubuntu-latest
@@ -39,6 +40,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Run tests
         run: |
           mvn test
