--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,11 +16,8 @@ jobs:
           distribution: 'adopt'
           java-version: 21
 
-      - name: Set up Maven
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'maven'
-          maven-version: '3.8.6'
+      - name: Setup Maven
+        uses: s4u/setup-maven-action@3.8.6
 
   lint:
     runs-on: ubuntu-latest
