--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,6 +21,11 @@ jobs:
         with:
           maven-version: 3.8.6
 
+      - name: Check Java version
+        run: |
+          java -version
+          echo %JAVA_HOME%
+
   lint:
     runs-on: ubuntu-latest
     needs: setup_environment
