--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,16 +16,6 @@ jobs:
           distribution: 'adopt'
           java-version: 21
 
-      - name: Setup Maven
-        uses: stCarolas/setup-maven@v5
-        with:
-          maven-version: 3.8.6
-
-      - name: Check Java version
-        run: |
-          java -version
-          echo $JAVA_HOME
-
   lint:
     runs-on: ubuntu-latest
     needs: setup_environment
@@ -35,7 +25,7 @@ jobs:
 
       - name: Lint with Checkstyle
         run: |
-          mvn checkstyle:check
+          mvnw checkstyle:check
 
   test:
     runs-on: ubuntu-latest
@@ -47,7 +37,7 @@ jobs:
 
       - name: Run tests
         run: |
-          mvn test
+          mvnw test
 
   build:
     runs-on: ubuntu-latest
@@ -60,7 +50,7 @@ jobs:
 
       - name: Build with Maven
         run: |
-          mvn clean package -DskipTests
+          mvnw clean package -DskipTests
 
   push_to_docker:
     name: Push to Docker Hub
@@ -71,6 +61,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
