--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Lint with Checkstyle
         run: |
-          mvnw checkstyle:check
+          ./mvnw checkstyle:check
 
   test:
     runs-on: ubuntu-latest
