--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,6 +10,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Give permissions
+        run: chmod +x ./mvnw
+
       - name: Setup JDK 21
         uses: actions/setup-java@v2
         with:
