--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,9 +10,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Give permissions
-        run: chmod +x ./mvnw
-
       - name: Setup JDK 21
         uses: actions/setup-java@v2
         with:
@@ -26,6 +23,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Give permissions
+        run: chmod +x ./mvnw
+
       - name: Lint with Checkstyle
         run: |
           ./mvnw checkstyle:check
@@ -38,9 +38,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Give permissions
+        run: chmod +x ./mvnw
+
       - name: Run tests
         run: |
-          mvnw test
+          ./mvnw test
 
   build:
     runs-on: ubuntu-latest
@@ -51,9 +54,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Give permissions
+        run: chmod +x ./mvnw
+
       - name: Build with Maven
         run: |
-          mvnw clean package -DskipTests
+          ./mvnw clean package -DskipTests
 
   push_to_docker:
     name: Push to Docker Hub
