--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,6 +16,16 @@ jobs:
           distribution: 'adopt'
           java-version: 21
 
+      - name: Setup Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.8.6
+
+      - name: Check Java version
+        run: |
+          java -version
+          mvn --version
+
   lint:
     runs-on: ubuntu-latest
     needs: setup_environment
@@ -23,12 +33,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Give permissions
-        run: chmod +x ./mvnw
-
       - name: Lint with Checkstyle
         run: |
-          ./mvnw checkstyle:check
+          mvn checkstyle:check
 
   test:
     runs-on: ubuntu-latest
@@ -38,12 +45,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Give permissions
-        run: chmod +x ./mvnw
-
       - name: Run tests
         run: |
-          ./mvnw test
+          mvn test
 
   build:
     runs-on: ubuntu-latest
@@ -54,12 +58,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Give permissions
-        run: chmod +x ./mvnw
-
       - name: Build with Maven
         run: |
-          ./mvnw clean package -DskipTests
+          mvn clean package -DskipTests
 
   push_to_docker:
     name: Push to Docker Hub
@@ -70,7 +71,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
