--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Run tests
         run: |
-          mvn test
+          mvn clean test
 
   build:
     runs-on: ubuntu-latest
