--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,9 +28,20 @@ jobs:
           echo "JAVA_HOME=$JAVA_HOME"
           echo "$PATH"
 
+#  lint:
+#    runs-on: ubuntu-latest
+#    needs: setup_environment
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v2
+#
+#      - name: Lint with Checkstyle
+#        run: |
+#          mvn checkstyle:check
+
   test:
     runs-on: ubuntu-latest
-    needs: lint
+    needs: setup_environment
     if: success()
     steps:
       - name: Checkout code
@@ -38,7 +49,7 @@ jobs:
 
       - name: Run tests
         run: |
-          mvn clean test
+          mvn test
 
   build:
     runs-on: ubuntu-latest
