--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,20 +28,20 @@ jobs:
           echo "JAVA_HOME=$JAVA_HOME"
           echo "$PATH"
 
-#  lint:
-#    runs-on: ubuntu-latest
-#    needs: setup_environment
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v2
-#
-#      - name: Lint with Checkstyle
-#        run: |
-#          mvn checkstyle:check
+  lint:
+    runs-on: ubuntu-latest
+    needs: setup_environment
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Lint with Checkstyle
+        run: |
+          mvn checkstyle:check
 
   test:
     runs-on: ubuntu-latest
-    needs: setup_environment
+    needs: lint
     if: success()
     steps:
       - name: Checkout code
@@ -49,7 +49,7 @@ jobs:
 
       - name: Run tests
         run: |
-          mvn test
+          mvn test -X
 
   build:
     runs-on: ubuntu-latest
