--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,7 +4,7 @@ on:
   pull_request:
 
 jobs:
-  setup_environment:
+  checks:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -28,44 +28,13 @@ jobs:
           echo "JAVA_HOME=$JAVA_HOME"
           echo "$PATH"
 
-  lint:
-    runs-on: ubuntu-latest
-    needs: setup_environment
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Check Java version
-        run: |
-          java -version
-          mvn --version
-          echo "JAVA_HOME=$JAVA_HOME"
-          echo "$PATH"
-
       - name: Lint with Checkstyle
         run: |
           mvn checkstyle:check
 
-  test:
-    runs-on: ubuntu-latest
-    needs: lint
-    if: success()
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
       - name: Run tests
         run: |
-          mvn test -X
-
-  build:
-    runs-on: ubuntu-latest
-    needs: test
-    if: success()
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+          mvn clean test
 
       - name: Build with Maven
         run: |
@@ -74,12 +43,31 @@ jobs:
   push_to_docker:
     name: Push to Docker Hub
     runs-on: ubuntu-latest
-    needs: build
+    needs: checks
     if: github.event.pull_request.merged == true && github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/v')
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Setup JDK 21
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: 21
+
+      - name: Setup Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.8.6
+
+      - name: Check Java version
+        run: |
+          java -version
+          mvn --version
+          echo "JAVA_HOME=$JAVA_HOME"
+          echo "$PATH"
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
