--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,7 +4,7 @@ on:
   pull_request:
 
 jobs:
-  checks:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -31,10 +31,58 @@ jobs:
       - name: Lint with Checkstyle
         run: |
           mvn checkstyle:check
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup JDK 21
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: 21
+
+      - name: Setup Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.8.6
+
+      - name: Check Java version
+        run: |
+          java -version
+          mvn --version
+          echo "JAVA_HOME=$JAVA_HOME"
+          echo "$PATH"
 
       - name: Run tests
         run: |
           mvn clean test
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup JDK 21
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: 21
+
+      - name: Setup Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.8.6
+
+      - name: Check Java version
+        run: |
+          java -version
+          mvn --version
+          echo "JAVA_HOME=$JAVA_HOME"
+          echo "$PATH"
 
       - name: Build with Maven
         run: |
@@ -43,7 +91,10 @@ jobs:
   push_to_docker:
     name: Push to Docker Hub
     runs-on: ubuntu-latest
-    needs: checks
+    needs:
+      - lint
+      - tests
+      - build
     if: github.event.pull_request.merged == true && github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/v')
 
     steps:
