--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -95,7 +95,8 @@ jobs:
       - lint
       - tests
       - build
-    if: github.event.pull_request.merged == true && github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/v')
+
+    if: success()
 
     steps:
       - name: Checkout code
