--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -120,12 +120,21 @@ jobs:
           echo "JAVA_HOME=$JAVA_HOME"
           echo "$PATH"
 
+      - name: Build with Maven
+        run: |
+          mvn clean package -DskipTests
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Push to Docker Hub
-        run: |
-          docker push re-tail/${{ github.event.repository.name }}:${{ github.sha }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            re-tail/${{ github.event.repository.name }}:${{ github.sha }}
