--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -98,6 +98,12 @@ jobs:
 
     if: success()
 
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -124,14 +130,15 @@ jobs:
         run: |
           mvn clean package -DskipTests
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - name: Login to Github Packages
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@6
         with:
           context: .
           file: ./Dockerfile
