--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -144,4 +144,4 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            re-tail/${{ github.event.repository.name }}:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:${{ github.sha }}
