--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -145,3 +145,4 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:${{ github.sha }}
+            latest
