--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,26 @@
 name: Build image and deploy
 
 on:
-  pull_request:
-    types:
-      - closed
-    branches:
-      - main
+  push:
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'v-')
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Extract version from tag
-        id: extract_version
-        run: |
-          VERSION=${GITHUB_REF#refs/heads/}
-          echo "Extracted version: $VERSION"
-          echo "::set-output name=version::$VERSION"
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ghcr.io/${{ github.repository }}
+          tags: |
+            type=raw,value=latest
+            type=ref,event=tag,enable=${{github.ref == format('refs/heads/{0}', 'main')}}
 
       - name: setup java
         uses: actions/setup-java@v3
@@ -57,5 +57,5 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.event.repository.name }}:latest
-            ghcr.io/${{ github.repository }}:${{ steps.extract_version.outputs.version }}
+            ghcr.io/${{ github.repository }}:${{ steps.meta.outputs.tags }}
+            ghcr.io/${{ github.event.repository.name }}:${{ steps.meta.outputs.labels }}
