--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,8 +52,8 @@ jobs:
 
       - name: Debug metadata
         run: |
-          echo "Tags: ${{ steps.metadata.outputs.tags }}"
-          echo "Labels: ${{ steps.metadata.outputs.labels }}"
+          echo "Tags: ${{ steps.meta.outputs.tags }}"
+          echo "Labels: ${{ steps.meta.outputs.labels }}"
 
 
       - name: Build and push
