--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           mvn clean test
 
-  build:
+  build-and-curl:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -88,3 +88,9 @@ jobs:
       - name: Build with Maven
         run: |
           mvn clean package -DskipTests
+      - name: Start
+        run: |
+          java -jar target/auth-service-0.0.1-SNAPSHOT.jar
+      - name: Curl
+        run: |
+          curl -X GET http://localhost:8080/actuator/health
