--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,13 +84,23 @@ jobs:
           echo "JAVA_HOME=$JAVA_HOME"
           echo "$PATH"
 
+  test-environtment:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Build with Maven
+      - name: Set up Docker
+        uses: docker/setup-docker-action@v4
+
+      - name: Start postgres
         run: |
-          mvn clean package -DskipTests
-      - name: Start
+          docker run --name postgres -p 5432:5432 -e POSTGRES_PASSWORD=postgres -e POSTGRES_USER=postgres -e POSTGRES_DB=app -d postgres
+      - name: Start app
         run: |
-          java -jar target/auth-service-0.0.1-SNAPSHOT.jar
-      - name: Curl
+          mvn package -DskipTests
+          docker build -t app .
+          docker run --name app -p 8080:8080 -d app -e POSTGRES_URI=jdbc:postgresql://localhost:5432/app -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres
+      - name: Curl actuator
         run: |
           curl -X GET http://localhost:8080/actuator/health
