--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           mvn clean test
 
-  build-and-curl:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -89,6 +89,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Setup JDK 21
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: 21
 
       - name: Set up Docker
         uses: docker/setup-docker-action@v4
