--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,5 +112,6 @@ jobs:
           docker run --name app -p 8080:8080 -d app -e POSTGRES_URI=jdbc:postgresql://localhost:5432/app -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres
       - name: Curl actuator
         run: |
+          docker ls
           sleep 40
-          curl -X GET http://localhost:8080/actuator/health
+          curl 'http://localhost:8080/actuator/health' -i -X GET -H 'Accept: application/json'
