--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
       host: ${REDIS_HOST}
       port: ${REDIS_PORT}
       password: ${REDIS_PASSWORD}
+  jpa:
+    show-sql: false
+    hibernate:
+      ddl-auto: validate
 
 eureka:
   client:
@@ -25,7 +29,11 @@ app:
   jwt:
     subject: ${JWT_SUBJECT}
     issuer: ${JWT_ISSUER}
-    accessDuration: ${JWT_ACCESS_DURATION}
-    accessSecret: ${JWT_ACCESS_SECRET}
-    refreshDuration: ${JWT_REFRESH_DURATION}
-    refreshSecret: ${JWT_REFRESH_SECRET}
+    access:
+      duration: ${JWT_ACCESS_DURATION}
+      secret: ${JWT_ACCESS_SECRET}
+    refresh:
+      duration: ${JWT_REFRESH_DURATION}
+      secret: ${JWT_REFRESH_SECRET}
+  uuid:
+    seed: ${UUID_SEED}
